[package]
name = "async-wal-db"
version = "0.1.0"
edition = "2021"
description = "Production-grade async Write-Ahead Log database with CRC32 checksums and lock-free concurrent writes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/async-wal-db"
keywords = ["database", "wal", "async", "lock-free", "embedded"]
categories = ["database", "database-implementations", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
crossbeam = "0.8"
heed = "0.20"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3.0"  # For test WAL files

[lints.clippy]
# Correctness lints (deny by default)
correctness = { level = "deny", priority = -1 }

# Suspicious patterns
suspicious = { level = "warn", priority = -1 }

# Performance improvements
perf = { level = "warn", priority = -1 }

# Code complexity
complexity = { level = "warn", priority = -1 }

# Pedantic checks for code quality
pedantic = { level = "warn", priority = -1 }

# Specific pedantic overrides (allow some noisy ones)
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Style consistency
style = { level = "warn", priority = -1 }

# Cargo-specific lints
cargo = { level = "warn", priority = -1 }